--- a/ResLifeToolkit/app/src/main/AndroidManifest.xml
+++ b/ResLifeToolkit/app/src/main/AndroidManifest.xml
@@ -16,7 +16,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".ProgrammingListActivity" />
-        <activity android:name=".DutyLogListActivity"></activity>
+        <activity android:name=".DutyLogListActivity" />
+        <activity android:name=".ProgrammingFormActivity"></activity>
     </application>
 
 </manifest>
