Need to implement UItriggers. Add Button created. Problems with adding new form to be worked out.

--- a/ResLifeToolkit/app/src/main/AndroidManifest.xml
+++ b/ResLifeToolkit/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".ProgrammingListActivity" />
         <activity android:name=".DutyLogListActivity" />
-        <activity android:name=".ProgrammingFormActivity"></activity>
+        <activity android:name=".ProgrammingFormActivity" />
     </application>
 
 </manifest>
