--- a/ResLifeToolkit/app/build.gradle
+++ b/ResLifeToolkit/app/build.gradle
@@ -28,4 +28,5 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.itextpdf:itextg:5.5.10'
 }
