--- a/ResLifeToolkit/app/src/main/AndroidManifest.xml
+++ b/ResLifeToolkit/app/src/main/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.a33528.reslifetoolkit">
 
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -20,6 +21,7 @@
         <activity android:name=".ProgrammingListActivity" />
         <activity android:name=".DutyLogListActivity" />
         <activity android:name=".ProgrammingFormActivity" />
+        <activity android:name=".DutyLogActivity"></activity>
     </application>
 
 </manifest>
