Progress made on DutyLogs. Removed WorkOrder object as it is not distinguishable from the DutyLog object.

--- a/ResLifeToolkit/app/src/main/AndroidManifest.xml
+++ b/ResLifeToolkit/app/src/main/AndroidManifest.xml
@@ -21,7 +21,9 @@
         <activity android:name=".ProgrammingListActivity" />
         <activity android:name=".DutyLogListActivity" />
         <activity android:name=".ProgrammingFormActivity" />
-        <activity android:name=".DutyLogActivity"></activity>
+        <activity android:name=".DutyLogActivity" />
+        <activity android:name=".DocumentationActivity" />
+        <activity android:name=".DocumentationListActivity"></activity>
     </application>
 
 </manifest>
